[workspace]
resolver = "2"
members = [
    "flint-steel", "flint-steel-chunk",
]
[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# flint-core = { git = "https://github.com/FlintTestMC/flint-core.git" }
# for local flint-core changes
flint-core = { path = "../flint-core" }
dotenvy = "0.15"
# rsjsonnet = "0.4.0" # for jsonnet support